--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
   "name": "imageresizer",
-  "productName":"ImageResizer",
+  "productName": "ImageResizer",
   "version": "1.0.0",
   "description": "",
   "main": "main.js",
+  
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "test:unit": "mocha --loader esm-loader test/unit/**/*.spec.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^20.2.0"
+    "@wdio/cli": "^8.39.0",
+    "@wdio/local-runner": "^8.39.0",
+    "@wdio/mocha-framework": "^8.39.0",
+    "@wdio/spec-reporter": "^8.39.0",
+    "chai": "^5.1.1",
+    "electron": "^20.2.0",
+    "esm": "^3.2.25",
+    "esm-loader": "^0.1.0",
+    "wdio-electron-service": "^6.6.1"
   },
   "dependencies": {
     "resize-img": "^2.0.0",
